# jwtsign

./: .gitignore  Cargo.toml  Makefile  README.md  build-wheels.sh  setup.cfg  setup.py
.github/workflows/: ci.yml  pypi.yml
integration_tests/: bindings.py
make/: build.mk  clean.mk  docs.mk  env.mk  lint.mk  test.mk
python/jwtsign/: __init__.py  jwtsign.pyi
res/: private_key.pem  public_key.pem
src/: error.rs  jwt.rs  lib.rs  py.rs
src/jwt/: decoder.rs  encoder.rs
