[metadata]
name = jwtsign
url = https://github.com/kruhlmann/jwtsign
description = JWT encoding and decoding limited to RS256
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Rust

[options]
packages = find:
include_package_data = true
zip_safe = false
package_dir = = src
python_requires = >= 3.10

[options.package_data]
* = *.pyi
