[metadata]
name = jwtsign
url = https://github.com/kruhlmann/jwtsign
description = JWT encoding and decoding limited to RS256
long_description = file: README.md
version = attr: jwtsign.version.__version__
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Rust

[options]
packages = find:
where = python
include_package_data = true
zip_safe = false
python_requires = >= 3.10

[options.package_data]
jwtsign = *.pyi

[options.packages.find]
where = python
